# RealTimeVideoTool

./: CMakeLists.txt  README.md  notes.txt  quick-build-debug.sh  quick-build-release.sh
Libraries/include/camera_utils/: camera_builtin_utils.h  camera_errors.h  camera_realsense_utils.h
Libraries/include/meta_data_utils/: MetaDataExtractor.hpp
Libraries/include/video_utils/: video_convert.h  video_decode.h  video_encode.h  video_errors.h
Libraries/src/: CMakeLists.txt
Libraries/src/camera_utils/: CMakeLists.txt  camera_builtin_utils.cpp  camera_realsense_utils.cpp
Libraries/src/meta_data_utils/: CMakeLists.txt  MetaDataExtractor.cpp
Libraries/src/video_utils/: CMakeLists.txt  video_convert.cpp  video_decode.cpp  video_encode.cpp
Project/src/: CMakeLists.txt  main.cpp
